Bug 309777 - kmail systray icon inconsistent behaviour
Summary: kmail systray icon inconsistent behaviour
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-08 22:38 UTC by Dave Lepore
Modified: 2012-11-27 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Lepore 2012-11-08 22:38:19 UTC
hello,

if the option "Always show kmail in system tray" is checked, the kmail icon in system tray stays there even after the kmail window is closed. 

On the other hand, if the option "Only show KMail in system tray if there are unread messages" is checked and if there are no unread email, the KMail icon in system tray disappears after closing the main window, so that new incoming emails aren't notified until the app is manually relaunched. 

I believe KMail should not close completely if the "Only show KMail in system tray if there are unread messages" option is checked but should remain in the systray (hidden) so that new email may be notified.

Reproducible: Always

Steps to Reproduce:
1. Check the "Only show KMail in system tray if there are unread messages" option in KMail -> Settings -> Appearance System Tray
2. Make sure there are no unread emails
3. Close Kmail
Actual Results:  
The KMail icon disappears and the app is now completely closed, no new email will be notified until the main app is reopened

Expected Results:  
The KMail icon should remain hidden in the systray and the app should not completely close, as it happens when the "Always show kmail in system tray" is checked.
Comment 1 Laurent Montel 2012-11-27 14:25:27 UTC
Git commit 80eb1cbd10f3c1c922229bb4a26edbd7fe18010c by Montel Laurent.
Committed on 27/11/2012 at 15:24.
Pushed by mlaurent into branch 'master'.

Fix Bug 309777 - kmail systray icon inconsistent behaviour

FIXED-IN: 4.10

M  +3    -2    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/80eb1cbd10f3c1c922229bb4a26edbd7fe18010c