Fix Bug 309777 - kmail systray icon inconsistent behaviour

FIXED-IN: 4.10
BUG: 309777